@@ -35,7 +35,9 @@ if HAVE_CUDA_SUPPORT
 
 # runtime management library for the cuda adapter
 
-lib_LTLIBRARIES += libscorep_adapter_cuda_mgmt.la
+lib_LTLIBRARIES += \
+    libscorep_adapter_cuda_mgmt.la \
+    libscorep_adapter_cuda_event.la
 
 libscorep_adapter_cuda_mgmt_la_SOURCES  = \
     $(SRC_ROOT)src/adapters/cuda/SCOREP_Cuda_Init.c \
@@ -76,6 +78,23 @@ libscorep_adapter_cuda_mgmt_la_LDFLAGS = \
     @CUDA_LDFLAGS@                       \
     $(library_api_version_ldflags)
 
-# no event library for the cuda adapter
+libscorep_adapter_cuda_event_la_SOURCES  = \
+    $(SRC_ROOT)src/adapters/cuda/scorep_cuda_nvtx.c
+
+libscorep_adapter_cuda_event_la_CPPFLAGS = \
+    $(AM_CPPFLAGS)                        \
+    -I$(PUBLIC_INC_DIR)                   \
+    -I$(INC_ROOT)src/measurement/include  \
+    $(UTILS_CPPFLAGS)                     \
+    @CUDA_CPPFLAGS@                       \
+    -I$(INC_DIR_DEFINITIONS)              \
+    @SCOREP_TIMER_CPPFLAGS@
+
+libscorep_adapter_cuda_event_la_LIBADD = \
+    @CUDA_LIBS@
+
+libscorep_adapter_cuda_event_la_LDFLAGS = \
+    @CUDA_LDFLAGS@                       \
+    $(library_api_version_ldflags)
 
 endif
